# schib

./: README.md  main.py
data/: sales_report_input.csv
pyspark/: pyproject.toml  run_pyspark.py
pyspark/data/: inventory.parquet  selected_users.parquet
pyspark/tasks/: __init__.py  tasks.py
python/: run_python.py
python/data/: sales_report_output_20220919_020001.csv
